# E6Start

./: .gitignore  README.md  draft_planning.md  pyproject.toml  train.py
configs/: base_config.yaml
configs/sweeps/: sweep_config.yaml
src/: dataset.py
src/models/: medium_mnist_model.py  simple_mnist_model.py
